--- a/style.css
+++ b/style.css
@@ -212,3 +212,76 @@ a {
     line-height: 19px;
     color: #343434;
 }
+.catalog {
+    margin-bottom: 150px;
+}
+.decor__img {
+    margin-right: 40px;
+}
+.title4 {
+    justify-content: start;
+    width: 100%;
+    margin-bottom: 70px;
+}
+.catalog__nav {
+    width: 20%;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+.catalog__item {
+    list-style: none;
+}
+.catalog__link {
+    font-family: 'Oswald';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 36px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #343434;
+    transition: 0.5s;
+}
+.catalog__link:hover {
+    text-decoration: underline;
+    text-decoration-color: #005BC1;
+    color: #005BC1;
+}
+.catalog__product {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.product {
+    max-width: 350px;
+    height: 300px;
+    border: 3px solid #005BC1;
+    position: relative;
+}
+.product__img {
+    width: 100%;
+    object-fit: contain;
+}
+.desc__product {
+    padding: 0px 25px;
+    top: 199px;
+    left: 80px;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    width: 265px;
+    height: 86px;
+    background-color: #005BC1;
+}
+.text__product {
+    font-family: 'Oswald';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
