--- a/style.css
+++ b/style.css
@@ -360,3 +360,143 @@ a {
     color: #343434;
     margin-bottom: 20px;
 }
+.news{
+    margin-bottom: 120px;
+}
+.title6{
+    margin-bottom: 77px;
+}
+.news__left {
+    width: 250px;
+}
+.news__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 190px;
+    height: 51px;
+    border: none;
+    background: #005BC1;
+    transition: all 0.5s ease;
+    margin-left: 670px;
+}
+.news__text{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+.news__button:hover{
+    background: #FFFFFF;
+    color: #005BC1;
+    border: 2px solid #005BC1;
+}
+.news__card-big{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 560px;
+}
+.news__card-big img{
+    width: 255px;
+    margin-right: 30px;
+}
+.big-card-info div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 42px;
+}
+.news__read{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 19px;
+    text-decoration-line: underline;
+    color: #343434;
+}
+.big-card-info h3{
+    text-decoration-line: none;
+    font-family: 'Oswald';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #343434;
+}
+.big-card-info p{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 19px;
+    color: #979797;
+ 
+}
+.big-card-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+}
+.big-card-info p{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 19px;
+    color: #343434;
+}
+.news__cards{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.news__card-little{
+    width: 225px;
+    height: 242px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+.news__card-little:first-child{
+    margin-right: 60px;
+}
+.news__card-little:last-child h3{
+    width: 100px;
+}
+.news__card-little div{
+    display: flex;
+    justify-content: space-between;
+    align-items:flex-end;
+}
+.news__card-little p{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 19px;
+    color: #343434;
+}
+.news__card-little h3{
+    font-family: 'Oswald';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #343434;
+    margin-bottom: 20px;
+}
+.little-card-img{
+    width: 128px;
+}
